--- a/GO_Project/HTML/logisticsMain.html
+++ b/GO_Project/HTML/logisticsMain.html
@@ -1,27 +1,30 @@
-<div ng-repeat="y in Order">
-	<div class="container">
-		<div class="well">
-			<div>
-				<span>ORDER ID:-{{y.orderId}}</span>
+<div class="loader" ng-hide="loaded"></div>
+<div ng-show="loaded">
+	<div ng-repeat="y in Order">
+		<div class="container">
+			<div class="well">
+				<div>
+					<span>ORDER ID:-{{y.orderId}}</span>
+					<span class="floatRight">
+						{{y.date|date: "mediumDate" }}
+					</span>
+				</div>
+				<div>
+					Deliver To:- {{y.address.customerName}},{{y.address.Address}},{{y.address.city}},{{y.address.mobileNo}},{{y.address.pincode}},{{y.address.state}}
+				</div>
+				<br> Product Id: {{y.pid}}
+				<br> Current Status: {{status[y.status]}}
+				<br> Gift Wrapper: {{y.gift_Wrapper}}
+				<br> New Status: {{status[newStatus]}}
 				<span class="floatRight">
-					{{y.date|date: "mediumDate" }}
+					<select ng-model="newStatus">
+						<option ng-repeat="x in status" value="{{$index}}">
+							<span>{{x}}</span>
+						</option>
+					</select>
+					<button ng-click="store(y,newStatus)">Update</button>
 				</span>
 			</div>
-			<div>
-					Deliver To:- {{y.address.customerName}},{{y.address.Address}},{{y.address.city}},{{y.address.mobileNo}},{{y.address.pincode}},{{y.address.state}}
-			</div>
-			<br> productId: {{y.pid}}
-			<br> status: {{status[y.status]}}
-			<br> gift_Wrapper: {{y.gift_Wrapper}}
-			<br> newStatus: {{status[newStatus]}}
-			<span class="floatRight">
-			<select ng-model="newStatus">
-				<option ng-repeat="x in status" value="{{$index}}">
-					<span>{{x}}</span>
-				</option>
-			</select>
-			<button ng-click="store(y,newStatus)">Update</button>
-		</span>
 		</div>
 	</div>
 </div>
