--- a/GO_Project/HTML/cart.html
+++ b/GO_Project/HTML/cart.html
@@ -16,7 +16,8 @@
 			<tbody>
 				<tr ng-repeat="x in Cart">
 					<td>
-						<img src="{{'./resources/images/'+x.img}}">{{x.img}}</td>
+						<img class="imageList" src="{{'./resources/images/'+x.img}}" onerror="this.src='./resources/logo/no_image_available.jpeg';">
+					</td>
 					<td>{{x.pname}}</td>
 					<td>
 						<span class="glyphicon glyphicon-plus" ng-click="x.quantity=x.quantity+1"></span>{{x.quantity}}
