--- a/GO_Project/HTML/productList.html
+++ b/GO_Project/HTML/productList.html
@@ -15,8 +15,8 @@
 
             <div class="col-md-3 listItemCell" ng-repeat=" x in products" ng-click="selectedItem(x.pid)">
 
-                <img src="{{'./resources/images/'+x.img}}" style="max-height: 200px" class="img img-thumbnail"> Name:{{x.itemName}}
-
+                <img src="{{'./resources/images/'+x.img}}" class="imageList img img-thumbnail" onerror="this.src='./resources/logo/no_image_available.jpeg';"> Name:{{x.itemName}}
+                
                 <br> Rs.{{x.itemPrice}}
 
 
