--- a/GO_Project/HTML/home.html
+++ b/GO_Project/HTML/home.html
@@ -3,4 +3,5 @@
     <a href ="#!logistics">Logistics</a>|
     <a href="#!order">Order</a>|
     <a href="#!productList">Product List</a>|
+    <a href="#!address">Address</a>|
 </div>
