--- a/GO_Project/HTML/order.html
+++ b/GO_Project/HTML/order.html
@@ -13,7 +13,8 @@
 			</div>
 			<div class="col-md-12">
 				<div class="col-sm-4">
-					<img class="listImage" src="./resources/images/climbers.jpg">
+					
+					<img class="imageList" src="{{'./resources/images/'+x.img}}" onerror="this.src='./resources/logo/no_image_available.jpeg';">
 
 				</div>
 				<div class="col-sm-2">
