--- a/GO_Project/index.html
+++ b/GO_Project/index.html
@@ -26,6 +26,9 @@
 	<script src="./controller/homeController.js"></script>
 	<script src="./controller/registerFormController.js"></script>
 	<script src="./controller/addTechnicalSpecsController.js"></script>
+	<script src="./controller/addressManagementController.js"></script>
+
+	
 </head>
 <body ng-app="myApp">
     <div class="logo">
