--- a/GO_Project/HTML/addTechSpecs.html
+++ b/GO_Project/HTML/addTechSpecs.html
@@ -32,7 +32,7 @@
                         <input type="text" ng-model="newItemPrice">
                     </td>
                 </tr>
-				<tr ng-animate="'animate'" style="border:1px solid red; padding:10px" ng-repeat="data in techSpecs">
+				<tr ng-animate="'animate'"  ng-repeat="data in techSpecs">
 					<td  ng-animate="'animate'" ><input class="form-control" type=text
 						ng-model="data.techAttr" placeholder="Enter Description Title..."></td>
 					<td  ng-animate="'animate'" ><input class="form-control" type=text
