--- a/GO_Project/HTML/order.html
+++ b/GO_Project/HTML/order.html
@@ -14,7 +14,7 @@
 			<div class="col-md-12">
 				<div class="col-sm-4">
 					
-					<img class="imageList" src="{{'./resources/images/'+x.img}}" onerror="this.src='./resources/logo/no_image_available.jpeg';">
+					<img class="imageList" ng-src="{{'./resources/images/'+x.img}}" onerror="this.src='./resources/logo/no_image_available.jpeg';">
 
 				</div>
 				<div class="col-sm-2">
