--- a/GO_Project/HTML/addressSuggestion.html
+++ b/GO_Project/HTML/addressSuggestion.html
@@ -19,6 +19,10 @@
 						<br>
 					</ul>
 					<div class="paddingT10">
+					
+						<button ng-click="changeDefault(x)">Change
+						</button>
+					
 						<button type="button" class="btn btn-success" data-dismiss="modal" ng-click="changeAddress(x)">
 							Deliver to this Address
 						</button>
@@ -36,31 +40,3 @@
 		</div>
 	</div>
 </div>
-<!--
-	<div class="modal-body addressList">
-		<div class="addressBox" ng-repeat="x in addressList">
-			<ul class="listStyleNone">
-				<li>{{x.customerName}}</li>
-				<li>{{x.city}}</li>
-				<li>{{x.state}}</li>
-				<li>{{x.pincode}}</li>
-				<li>{{x.type}}</li>
-				<li>{{x.mobileNo}}</li>
-				<br>
-			</ul>
-			<div class="paddingT10">
-				<button type="button" class="btn btn-success" data-dismiss="modal" ng-click="Data($index)">
-					Deliver to this Address
-				</button>
-			</div>
-		</div>
-
-		<div class="newAddressBox">
-			<a href="#!newAddress">
-				<div onclick="$('.modal').modal('hide')" class="btn btn-success btn-lg">Add New Address
-					<span class="glyphicon glyphicon-plus"></span>
-				</div>
-			</a>
-		</div>
-	</div>
-</div-->
