--- a/GO_Project/HTML/productDetails.html
+++ b/GO_Project/HTML/productDetails.html
@@ -1,3 +1,4 @@
+<div ng-include="./HTML/navbar.html"></div>
 <div class="container" ng-init="loaded=false">
     <div class="loader" ng-hide="loaded"></div>
     <div ng-show="loaded">
