--- a/GO_Project/HTML/addressManagement.html
+++ b/GO_Project/HTML/addressManagement.html
@@ -1,4 +1,4 @@
-<div ng-include="./HTML/navbar.html"></div>
+<div ng-include="'./HTML/navbar.html'"></div>
 <div>
     <h2>Address Change</h2>
     <div>
