--- a/GO_Project/HTML/cart.html
+++ b/GO_Project/HTML/cart.html
@@ -35,7 +35,7 @@
 						<button data-toggle="modal" data-target="#myModal2" class="btn btn-success" ng-click="addressChange(x)">Change Address</button>
 					</td>
 					<td>
-						<span class="text-danger glyphicon glyphicon-trash font24" ng-click="deleteCartItem($index)"></span>
+						<span class="text-danger glyphicon glyphicon-trash font24" ng-click="deleteCartItem(x,$index)"></span>
 					</td>
 				</tr>
 			</tbody>
