--- a/GO_Project/HTML/home.html
+++ b/GO_Project/HTML/home.html
@@ -9,7 +9,7 @@
     <div class="search-container">
     <form>
       <input type="text" placeholder="Search.." name="search">
-      <button type="submit"><i class="fa fa-search"></i></button>
+      <button type="submit"><span class="glyphicon glyphicon-search"></span></button>
     </form>
   </div>
 </div>
